--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 API_KEY = 'RikkaChan'
-DATABASE_URL = 'database lu'
+DATABASE_URL = 'mongodb+srv://SiestaKawai:pRqnYzunicKG31xf@cluster0.lqeuk5h.mongodb.net/?retryWrites=true&w=majority''
