--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
    "author":"Wildan Izzudin",
    "license":"ISC",
    "dependencies":{
-      "@adiwajshing/keyed-db": "^0.2.4",
+      "@adiwajshing/baileys": "^4.4.0",
       "@hapi/hoek": "^10.0.1",
       "@colors/colors":"1.5.0",
       "@mtatko/tiktok-scraper":"latest",
@@ -64,7 +64,7 @@
       "cookie":"~0.4.1",
       "util":"~0.12.4",
       "yt-search":"~2.10.0",
-      "wa-sticker-formatter": "^3.6.0"
+      "wa-sticker-formatter":"^3.6.0"
    },
    "bugs":{
       "url":"https://github.com/neoxr/neoxr-bot/issues"
