--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 API_KEY = 'RikkaChan'
-DATABASE_URL = 'mongodb+srv://SiestaKawai:pRqnYzunicKG31xf@cluster0.lqeuk5h.mongodb.net/?retryWrites=true&w=majority'
+DATABASE_URL = 'mongodb+srv://SabilOfc:rkuVWGkA0vv7ZpYw@cluster0.kpxrrg5.mongodb.net/?retryWrites=true&w=majority'
